--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
 	"devDependencies": {
 		"@types/node": "^20.0.0",
 		"typescript": "^5.8.0"
+	},
+	"publishConfig": {
+		"access": "public"
 	}
 }
