--- a/package.json
+++ b/package.json
@@ -1,9 +1,22 @@
 {
 	"name": "@osumi/swagger-to-angular",
-	"version": "0.9.0",
+	"version": "0.9.1",
 	"description": "Utilidad CLI para generar servicios Angular desde Swagger",
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/osumionline/swagger-to-angular.git"
+	},
+	"keywords": [
+		"swagger",
+		"angular",
+		"osumi"
+	],
 	"author": "Iñigo Gorosabel",
 	"license": "MIT",
+	"bugs": {
+		"url": "https://github.com/osumionline/swagger-to-angular/issues"
+	},
+	"homepage": "https://github.com/osumionline/swagger-to-angular#readme",
 	"type": "module",
 	"bin": {
 		"swagger-to-angular": "./dist/bin/cli.js"
@@ -17,7 +30,11 @@
 		"build": "tsc",
 		"start": "node dist/bin/cli.js"
 	},
+	"dependencies": {
+		"commander": "^14.0.0"
+	},
 	"devDependencies": {
+		"@types/commander": "^2.12.0",
 		"@types/node": "^20.0.0",
 		"typescript": "^5.8.0"
 	},
